AtikCamerasSDK/example/C++ Example/AtikCamerasSDKExample/AtikCameras.h



	enum ARTEMISEFWTYPE
	{
		ARTEMIS_EFW1 = 1,
		ARTEMIS_EFW2 = 2
	};


	typedef void * ArtemisHandle;

	artfn int  ArtemisTriggeredExposure(				ArtemisHandle handle, bool bAwaitTrigger);

	artfn int  ArtemisGetProcessing(					ArtemisHandle handle);

	artfn int  ArtemisSetProcessing(					ArtemisHandle handle, int options);

		
	// ------------ Camera Specific Options -------------
	artfn bool ArtemisHasCameraSpecificOption(    ArtemisHandle handle, unsigned short id);

	artfn int  ArtemisCameraSpecificOptionGetData(ArtemisHandle handle, unsigned short id, unsigned char * data, int dataLength, int & actualLength);

	artfn int  ArtemisCameraSpecificOptionSetData(ArtemisHandle handle, unsigned short id, unsigned char * data, int dataLength);



	// ------------------- Filter Wheel -----------------------------------
	artfn int			ArtemisFilterWheelInfo(ArtemisHandle handle, int *numFilters, int *moving, int *currentPos, int *targetPos);

	artfn int			ArtemisFilterWheelMove(ArtemisHandle handle, int targetPos);

	artfn BOOL			ArtemisEFWIsPresent(int i);

	artfn ArtemisHandle ArtemisEFWConnect(int i);

	artfn int			ArtemisEFWDisconnect( ArtemisHandle handle);

	artfn int			ArtemisEFWGetDetails( ArtemisHandle handle, ARTEMISEFWTYPE * type, char * serialNumber);

	artfn int			ArtemisEFWNmrPosition(ArtemisHandle handle, int * nPosition);

	artfn int			ArtemisEFWSetPosition(ArtemisHandle handle, int   iPosition);

	artfn int			ArtemisEFWGetPosition(ArtemisHandle handle, int * iPosition, bool * isMoving);


	// ------------------- Guiding -----------------------------------
	artfn int ArtemisGuide(					   ArtemisHandle handle, int axis);

	artfn int ArtemisGuidePort(				   ArtemisHandle handle, int nibble);

	artfn int ArtemisPulseGuide(			   ArtemisHandle handle, int axis, int milli);

	artfn int ArtemisStopGuiding(			   ArtemisHandle handle);


	// ------------------- Lens -----------------------------------
	artfn int ArtemisGetLensAperture(ArtemisHandle handle, int* aperture);

	artfn int ArtemisGetLensFocus(   ArtemisHandle handle, int* focus);

	artfn int ArtemisGetLensLimits(  ArtemisHandle handle, int* apertureMin, int* apertureMax, int* focusMin, int* focusMax);

	artfn int ArtemisInitializeLens( ArtemisHandle handle);

	artfn int ArtemisSetLensAperture(ArtemisHandle handle, int aperture);

	artfn int ArtemisSetLensFocus(   ArtemisHandle handle, int focus);


	// ------------------- Shutter ----------------------------------		
	artfn int ArtemisCanControlShutter( ArtemisHandle handle, bool * canControl);

	artfn int ArtemisOpenShutter(		ArtemisHandle handle);

	artfn int ArtemisCloseShutter(	    ArtemisHandle handle);